--- a/Lab-05-starter/firmware/Lab-05-starter.X/nbproject/Makefile-genesis.properties
+++ b/Lab-05-starter/firmware/Lab-05-starter.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Mar 11 05:36:19 PDT 2025
-sam_e51_cnano.platformTool.md5=null
+#Thu Mar 13 18:09:24 PDT 2025
 sam_e51_cnano.languagetoolchain.version=4.50
 conf.ids=sam_e51_cnano
-host.id=0
-configurations-xml=df13e95b1b7e511cdec73728b0a43561
+host.id=tibj-n3oe-h
+configurations-xml=c421cee533c42b5d9a89b62ea0dffacf
 sam_e51_cnano.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=1eaf555a844840d91945cb14109201c3
-sam_e51_cnano.languagetoolchain.dir=/Applications/microchip/xc32/v4.50/bin
-sam_e51_cnano.Pack.dfplocation=/Users/vitobica2/.mchp_packs/Microchip/SAME51_DFP/3.8.253
+sam_e51_cnano.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.50\\bin
+sam_e51_cnano.Pack.dfplocation=C\:\\Users\\gabri\\.mchp_packs\\Microchip\\SAME51_DFP\\3.8.253
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
-proj.dir=/Users/vitobica2/Documents/GitHub/CISC-211-Lab-05-Division/Lab-05-starter/firmware/Lab-05-starter.X
-host.platform=mac
+sam_e51_cnano.com-microchip-mplab-mdbcore-AtmelIceScripting-AtmelIceScriptingBase.md5=d43f5c951d9688e0858d181444d084d4
+proj.dir=C\:\\Users\\gabri\\Documents\\GitHub\\CISC-211-Lab-05-Division-grayaalvarez\\Lab-05-starter\\firmware\\Lab-05-starter.X
+host.platform=windows
